@@ -3,6 +3,7 @@ module Administrate
     def index
       @search_term = params[:search].to_s.strip
       @resources = Administrate::Search.new(resource_resolver, @search_term).run
+      @resources = @resources.page(params[:page]).per(records_per_page)
       @page = Administrate::Page::Table.new(dashboard)
     end
 
@@ -67,6 +68,10 @@ module Administrate
       else
         :inactive
       end
+    end
+
+    def records_per_page
+      params[:per_page] || 20
     end
 
     def dashboard
